# torchio

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .scrutinizer.yml  CNAME  CONTRIBUTING.md  README.md  batching-redesign.md  justfile  mise.toml  print_system.py  pyproject.toml  tox.ini  versions.json  visualize_denoise.py  zensical.toml
.github/: codecov.yml  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/workflows/: bluesky.yml  check_pull_request_title.yml  code_quality.yml  docs-preview.yml  docs.yml  publish.yml  tests.yml  x.yml
.mise/tasks/: bump-python  deprecate-python-files  post-to-bluesky  post-to-x
1.2/: 404.html  gallery.py  index.html  objects.inv  search.json  sitemap.xml
1.2/data/: index.html
1.2/data/dataset/: index.html
1.2/data/image/: index.html
1.2/data/loader/: index.html
1.2/data/subject/: index.html
1.2/datasets/: index.html
1.2/examples/: index.html
1.2/examples/plot_3d_to_2d/: index.html
1.2/examples/plot_colin27/: index.html
1.2/examples/plot_custom_z_spacing/: index.html
1.2/examples/plot_history/: index.html
1.2/examples/plot_include_exclude/: index.html
1.2/examples/plot_video/: index.html
1.2/getting-started/: index.html
1.2/interfaces/cli/: index.html
1.2/interfaces/slicer/: index.html
1.2/javascripts/: copy-no-prompt.js
1.2/patches/: index.html
1.2/patches/inference/: index.html
1.2/patches/training/: index.html
1.2/transforms/: index.html
1.2/transforms/augmentation/: index.html
1.2/transforms/preprocessing/: index.html
2.0/: 404.html  gallery.py  index.html  objects.inv  plot_directive.py  search.json  sitemap.xml
2.0/concepts/data-model/: index.html
2.0/concepts/lazy-loading/: index.html
2.0/concepts/per-instance-augmentation/: index.html
2.0/concepts/transforms/: index.html
2.0/datasets/: index.html
2.0/examples/: plot_3d_to_2d.py  plot_history.py  plot_video.py
2.0/get-started/installation/: index.html
2.0/get-started/migration/: index.html
2.0/get-started/quickstart/: index.html
2.0/how-to/annotations/: index.html
2.0/how-to/custom-reader/: index.html
2.0/how-to/dataloader/: index.html
2.0/how-to/monai/: index.html
2.0/how-to/patch-inference/: index.html
2.0/how-to/patch-training/: index.html
2.0/how-to/remote-nii-zarr/: index.html
2.0/how-to/save-nii-zarr/: index.html
2.0/how-to/tta/: index.html
2.0/how-to/visualization/: index.html
2.0/reference/affine/: index.html
2.0/reference/axes/: index.html
2.0/reference/backends/: index.html
2.0/reference/bboxes/: index.html
2.0/reference/cli/: index.html
2.0/reference/image/: index.html
2.0/reference/loader/: index.html
2.0/reference/parameter_range/: index.html
2.0/reference/patches/: index.html
2.0/reference/points/: index.html
2.0/reference/random_parameters/: index.html
2.0/reference/subject/: index.html
2.0/reference/transforms/: index.html
2.0/reference/visualization/: index.html
2.0/tutorials/annotations/: index.html
2.0/tutorials/augmentation/: index.html
2.0/tutorials/first-pipeline/: index.html
2.0/tutorials/large-volumes/: index.html
benchmarks/: batching.py
docs/: credits.md  datasets.md  gallery.py  getting-started.md  index.md  plot_directive.py
docs/api/: cli.md  data.md  datasets.md  index.md  utilities.md
docs/api/transforms/: augmentation.md  index.md  preprocessing.md
docs/concepts/: data-model.md  index.md  lazy-loading.md  per-instance-augmentation.md  transforms.md
docs/data/: dataset.md  image.md  index.md  loader.md  subject.md
docs/examples/: plot_3d_to_2d.py  plot_include_exclude.py
docs/explanation/: data-model.md  index.md  transforms.md
docs/get-started/: installation.md  migration.md  quickstart.md
docs/how-to/: annotations.md  custom-reader.md  custom-transform.md  dataloader.md  index.md  monai.md  patch-inference.md  patch-training.md  remote-nii-zarr.md  save-nii-zarr.md  tta.md  visualization.md
docs/interfaces/: cli.md  index.md  slicer.md
docs/patches/: index.md  inference.md  training.md
docs/reference/: affine.md  axes.md  backends.md  bboxes.md  cli.md  compose.md  image.md  index.md  intensity.md  loader.md  parameter_range.md  patches.md  points.md  random_parameters.md  spatial.md  subject.md  transforms.md  visualization.md
docs/reference/transforms/: affine_transform.md  anisotropy.md  bias_field.md  blur.md  clamp.md  compose.md  contour.md  copy_affine.md  cornucopia_adapter.md  crop.md  flip.md  (+34 more)
docs/source/: README.rst  conf.py  datasets.rst  quickstart.rst
docs/transforms/: index.md
docs/tutorials/: annotations.md  augmentation.md  first-pipeline.md  index.md  large-volumes.md
src/torchio/: __init__.py  __main__.py  cli.py  download.py  imports.py  io.py  loader.py  logging.py  repr_html.py  types.py  utils.py  visualization.py
tests/: conftest.py  test_affine.py  test_anisotropy.py  test_axes.py  test_backends.py  test_batch.py  test_batch2_transforms.py  test_batch3_transforms.py  test_bboxes.py  test_bias_field.py  test_blur.py  test_clamp.py  test_cli.py  test_compose.py  test_contour.py  test_copy_affine.py  test_cornucopia_adapter.py  test_crop.py  test_crop_or_pad.py  test_datasets.py  test_device.py  test_ensure_shape_multiple.py  test_flip.py  test_gamma.py  test_ghosting.py  test_histogram_standardization.py  test_hydra.py  test_identity_warning.py  test_image.py  test_image_annotations.py  test_inverse.py  test_inversion.py  test_keep_largest.py  test_labels_to_image.py  test_lambda_transform.py  test_mask.py  test_monai_adapter.py  test_motion.py  test_new_transforms.py  test_noise.py  (+33 more)
tests/data/: test_image.py  test_io.py  test_queue.py  test_subject.py  test_subjects_dataset.py
tests/datasets/: test_medmnist.py
tests/transforms/: test_collate.py  test_custom_image_subclass.py  test_custom_image_subclass_fix.py  test_data_parser.py  test_fourier.py  test_intensity_transform.py  test_interpolation.py  test_invertibility.py  test_monai_adapter.py  test_reproducibility.py  test_transform_core.py  test_transforms.py
(+354 files in other folders)
