[project]
name = "torchio"
version = "2.0.0"
description = "Medical image preprocessing, augmentation, and patch-based training."
requires-python = ">=3.10"
license = "Apache-2.0"
readme = "README.md"
authors = [{ name = "TorchIO contributors", email = "fepegar@gmail.com" }]
maintainers = [{ name = "Fernando Pérez-García", email = "fepegar@gmail.com" }]
keywords = [
    "medical image computing",
    "pytorch",
    "preprocessing",
    "augmentation",
    "mri",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Typing :: Typed",
]
dependencies = [
    "einops",
    "fsspec[http]",
    "humanize",
    "jaxtyping",
    "loguru",
    "nibabel",
    "numpy",
    "platformdirs",
    "rich",
    "simpleitk",
    "torch",
    "typing_extensions>=4.0",
    "tyro>=1.0.12",
]

[project.urls]
Homepage = "https://torchio.org"
Source = "https://github.com/TorchIO-project/torchio"
"Issue tracker" = "https://github.com/TorchIO-project/torchio/issues"
Documentation = "https://docs.torchio.org"
"Release notes" = "https://github.com/TorchIO-project/torchio/releases"

[project.scripts]
torchio = "torchio.cli:main"

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
addopts = ["-ra", "--strict-config", "--strict-markers"]
filterwarnings = [
    # Ignore SimpleITK Swig warnings
    "ignore:builtin type .* has no __module__ attribute",
    "ignore:Casting complex values to real discards the imaginary part",
    # Raised by SimpleITK on CI
    "ignore:invalid escape sequence",
]
log_level = "INFO"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial",
]
minversion = "9"
testpaths = ["tests"]
xfail_strict = true

[tool.coverage.run]
source = ["torchio"]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_empty = true

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
select = ["A", "B", "C4", "E", "F", "I", "N", "PT", "RUF", "SIM", "UP", "W"]
ignore = [
    "N813", # https://docs.astral.sh/ruff/rules/camelcase-imported-as-lowercase/
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "B018", # https://docs.astral.sh/ruff/rules/useless-expression/
]
"src/torchio/data/bboxes.py" = [
    "A002", # `format` parameter shadows builtin — canonical name for this concept
]

[tool.bump-my-version]
current_version = "2.0.0"
commit = true
tag = true

[[tool.bump-my-version.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[dependency-groups]
dev = ["bump-my-version", "ipykernel>=7.2.0", "ipywidgets>=8.1.8", "tox-uv"]
test = [
    "colorcet",
    "ffmpeg-python",
    "matplotlib",
    "monai",
    "nifti-zarr",
    "pytest",
    "pytest-codeblocks>=0.17.0",
    "pytest-cov",
    "pytest-sugar",
]
docs = ["mkdocstrings-python", "zensical"]
quality = ["ruff"]
types = [
    "ipykernel",
    "matplotlib",
    "ty",
    "zarr",
]
zarr = ["nifti-zarr"]
plot = ["matplotlib", "colorcet"]
video = ["ffmpeg-python"]
monai = ["monai"]
s3 = ["s3fs"]
azure = ["adlfs"]
gcs = ["gcsfs"]
