[project]
name = "torchio"
version = "2.0.0a1"
description = "Medical image preprocessing, augmentation, and patch-based training."
requires-python = ">=3.10"
license = "Apache-2.0"
readme = "README.md"
authors = [{ name = "TorchIO contributors", email = "fepegar@gmail.com" }]
maintainers = [{ name = "Fernando Pérez-García", email = "fepegar@gmail.com" }]
keywords = [
    "medical image computing",
    "pytorch",
    "preprocessing",
    "augmentation",
    "mri",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Typing :: Typed",
]
dependencies = [
    "einops",
    "fsspec[http]",
    "humanize",
    "jaxtyping",
    "loguru",
    "nibabel",
    "numpy",
    "platformdirs",
    "rich",
    "simpleitk",
    "torch",
    "torch-interpol>=0.2.6",
    "typing_extensions>=4.0",
    "tyro>=1.0.12",
]

[project.urls]
Homepage = "https://torchio.org"
Source = "https://github.com/TorchIO-project/torchio"
"Issue tracker" = "https://github.com/TorchIO-project/torchio/issues"
Documentation = "https://docs.torchio.org"
"Release notes" = "https://github.com/TorchIO-project/torchio/releases"

[project.scripts]
torchio = "torchio.cli:main"

[project.optional-dependencies]
cornucopia = ["cornucopia"]
plot = ["matplotlib", "colorcet"]
niivue = ["ipyniivue"]
video = ["ffmpeg-python"]
monai = ["monai"]
s3 = ["s3fs"]
azure = ["adlfs"]
gcs = ["gcsfs"]
# nifti-zarr (1.0.0rc6) calls isinstance(x, zarr.storage.StoreLike), but in
# zarr >=3.2 StoreLike is a PEP 695 type alias (not isinstance-able), which
# raises TypeError. zarr 3.2 also requires Python >=3.12, so this only bites on
# 3.12+. Cap zarr until nifti-zarr supports zarr >=3.2. See copilot_log.md.
zarr = ["nifti-zarr", "zarr<3.2"]


[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
addopts = ["-ra", "--strict-config", "--strict-markers"]
filterwarnings = [
    # Ignore SimpleITK Swig warnings
    "ignore:builtin type .* has no __module__ attribute",
    "ignore:Casting complex values to real discards the imaginary part",
    # Raised by SimpleITK on CI
    "ignore:invalid escape sequence",
    # Tests deliberately construct no-op transforms (identity tests,
    # deterministic building blocks); the user-facing no-op warning is
    # asserted explicitly in test_identity_warning.py.
    "ignore:.* is a no-op with the given parameters:UserWarning",
]
log_level = "INFO"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial",
]
minversion = "8"
testpaths = ["tests"]
xfail_strict = true

[tool.coverage.run]
source = ["torchio"]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_empty = true

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
select = ["A", "B", "C4", "E", "F", "I", "N", "PT", "RUF", "SIM", "UP", "W"]
ignore = [
    "N813", # https://docs.astral.sh/ruff/rules/camelcase-imported-as-lowercase/
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "B018", # https://docs.astral.sh/ruff/rules/useless-expression/
]
"src/torchio/data/bboxes.py" = [
    "A002", # `format` parameter shadows builtin: canonical name for this concept
]

[tool.bumpversion]
current_version = "2.0.0a1"
commit = true
tag = true
parse = '''(?x)
    (?P<major>0|[1-9]\d*)\.
    (?P<minor>0|[1-9]\d*)\.
    (?P<patch>0|[1-9]\d*)
    (?:
        (?P<pre_l>a|b|rc)
        (?P<pre_n>0|[1-9]\d*)
    )?
'''
serialize = [
    "{major}.{minor}.{patch}{pre_l}{pre_n}",
    "{major}.{minor}.{patch}",
]

[tool.bumpversion.parts.pre_l]
values = ["a", "b", "rc", "final"]
optional_value = "final"
first_value = "final"

[tool.bumpversion.parts.pre_n]
first_value = "1"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[dependency-groups]
dev = [
    "bump-my-version",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "tox-uv",
]
test = [
    "colorcet",
    "cornucopia",
    "ffmpeg-python",
    "matplotlib",
    "monai",
    "nifti-zarr",
    "zarr<3.2",  # see [project.optional-dependencies].zarr for why zarr is capped
    "pytest<9",  # pytest-codeblocks 0.17.0 is incompatible with pytest 9 (removed the path arg from pytest_collect_file)
    "pytest-codeblocks>=0.17.0",
    "pytest-cov",
    "pytest-sugar",
]
docs = [
    "mkdocstrings-python",
    "nbconvert",
    "zensical",
]
docs-deploy = [
    { include-group = "docs" },
    "mike",
]
quality = ["ruff"]
types = [
    "ipykernel",
    "matplotlib",
    "ty",
    "zarr<3.2",  # see [project.optional-dependencies].zarr for why zarr is capped
]

# Zensical integrates with the Material team's fork of mike for versioned docs.
# The fork is not published on PyPI, so it is pinned directly from GitHub.
# See https://zensical.org/docs/setup/versioning/
[tool.uv.sources]
mike = { git = "https://github.com/squidfunk/mike.git" }
